Menu pizzas y pastas arreglado

--- a/css/main.css
+++ b/css/main.css
@@ -759,7 +759,7 @@ h6, .h6 {
   line-height: 1.2;
 }
 
-.display-2, .sectionM__article2__title__h2 {
+.display-2, .sectionM__article2__title__h2, .sectionM__article__title__h2 {
   font-size: 5.5rem;
   font-weight: 300;
   line-height: 1.2;
@@ -967,7 +967,7 @@ pre code {
   }
 }
 
-.row, .header__nav, .footer__section, .footer__section__article__div {
+.row, .header__nav, .footer__section, .footer__section__article__div, .sectionM__article__div {
   display: flex;
   flex-wrap: wrap;
   margin-right: -15px;
@@ -985,7 +985,7 @@ pre code {
   padding-left: 0;
 }
 
-.col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .footer__section__article__div__div, .col-7, .col-8, .col-9, .col-10, .col-11, .col-12, .footer__section__article__h2, .sectionM__article2__title__h2, .col,
+.col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .footer__section__article__div__div, .col-7, .col-8, .col-9, .col-10, .col-11, .col-12, .footer__section__article__h2, .sectionM__article2__title__h2, .sectionM__article__title__h2, .col,
 .col-auto, .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12, .header__nav__div, .header__nav__button, .header__nav__text, .header__nav__redes, .footer__section__article, .sectionM__article__div__div, .col-sm,
 .col-sm-auto, .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12, .col-md,
 .col-md-auto, .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg,
@@ -1095,7 +1095,7 @@ pre code {
   max-width: 91.66667%;
 }
 
-.col-12, .footer__section__article__h2, .sectionM__article2__title__h2 {
+.col-12, .footer__section__article__h2, .sectionM__article2__title__h2, .sectionM__article__title__h2 {
   flex: 0 0 100%;
   max-width: 100%;
 }
@@ -8172,7 +8172,7 @@ button.bg-dark:focus {
   margin-right: 3rem !important;
 }
 
-.mb-5, .sectionM__article2__title,
+.mb-5, .sectionM__article2__title, .sectionM__article__title,
 .my-5 {
   margin-bottom: 3rem !important;
 }
@@ -9892,7 +9892,7 @@ button.bg-dark:focus {
   text-align: right !important;
 }
 
-.text-center, .header__nav__text__ul__li__div, .footer__section__article__h2, .sectionM__article2__title, .sectionM__article__div__div__div__div-texto-m__h2, .sectionM__article__div__div__div__div-texto-m__p {
+.text-center, .header__nav__text__ul__li__div, .footer__section__article__h2, .sectionM__article2__title, .sectionM__article__title, .sectionM__article__div__div__div__div-texto-m__h2, .sectionM__article__div__div__div__div-texto-m__p {
   text-align: center !important;
 }
 
@@ -10575,7 +10575,7 @@ html {
   }
 }
 
-.row, .header__nav, .footer__section, .footer__section__article__div {
+.row, .header__nav, .footer__section, .footer__section__article__div, .sectionM__article__div {
   display: flex;
   flex-wrap: wrap;
   margin-right: -15px;
@@ -10593,7 +10593,7 @@ html {
   padding-left: 0;
 }
 
-.col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .footer__section__article__div__div, .col-7, .col-8, .col-9, .col-10, .col-11, .col-12, .footer__section__article__h2, .sectionM__article2__title__h2, .col,
+.col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .footer__section__article__div__div, .col-7, .col-8, .col-9, .col-10, .col-11, .col-12, .footer__section__article__h2, .sectionM__article2__title__h2, .sectionM__article__title__h2, .col,
 .col-auto, .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12, .header__nav__div, .header__nav__button, .header__nav__text, .header__nav__redes, .footer__section__article, .sectionM__article__div__div, .col-sm,
 .col-sm-auto, .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12, .col-md,
 .col-md-auto, .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg,
@@ -10703,7 +10703,7 @@ html {
   max-width: 91.66667%;
 }
 
-.col-12, .footer__section__article__h2, .sectionM__article2__title__h2 {
+.col-12, .footer__section__article__h2, .sectionM__article2__title__h2, .sectionM__article__title__h2 {
   flex: 0 0 100%;
   max-width: 100%;
 }
@@ -12356,7 +12356,7 @@ html {
   margin-right: 3rem !important;
 }
 
-.mb-5, .sectionM__article2__title,
+.mb-5, .sectionM__article2__title, .sectionM__article__title,
 .my-5 {
   margin-bottom: 3rem !important;
 }
