--- a/css/main.css
+++ b/css/main.css
@@ -903,7 +903,7 @@ pre code {
   overflow-y: scroll;
 }
 
-.container, .carrusel, .sectionM__article2, .sectionM__article {
+.container, .carrusel, .sectionM__article2 {
   width: 100%;
   padding-right: 15px;
   padding-left: 15px;
@@ -912,25 +912,25 @@ pre code {
 }
 
 @media (min-width: 576px) {
-  .container, .carrusel, .sectionM__article2, .sectionM__article {
+  .container, .carrusel, .sectionM__article2 {
     max-width: 540px;
   }
 }
 
 @media (min-width: 768px) {
-  .container, .carrusel, .sectionM__article2, .sectionM__article {
+  .container, .carrusel, .sectionM__article2 {
     max-width: 720px;
   }
 }
 
 @media (min-width: 992px) {
-  .container, .carrusel, .sectionM__article2, .sectionM__article {
+  .container, .carrusel, .sectionM__article2 {
     max-width: 960px;
   }
 }
 
 @media (min-width: 1200px) {
-  .container, .carrusel, .sectionM__article2, .sectionM__article {
+  .container, .carrusel, .sectionM__article2 {
     max-width: 1140px;
   }
 }
@@ -944,30 +944,30 @@ pre code {
 }
 
 @media (min-width: 576px) {
-  .container, .carrusel, .sectionM__article2, .sectionM__article, .container-sm {
+  .container, .carrusel, .sectionM__article2, .container-sm {
     max-width: 540px;
   }
 }
 
 @media (min-width: 768px) {
-  .container, .carrusel, .sectionM__article2, .sectionM__article, .container-sm, .container-md {
+  .container, .carrusel, .sectionM__article2, .container-sm, .container-md {
     max-width: 720px;
   }
 }
 
 @media (min-width: 992px) {
-  .container, .carrusel, .sectionM__article2, .sectionM__article, .container-sm, .container-md, .container-lg {
+  .container, .carrusel, .sectionM__article2, .container-sm, .container-md, .container-lg {
     max-width: 960px;
   }
 }
 
 @media (min-width: 1200px) {
-  .container, .carrusel, .sectionM__article2, .sectionM__article, .container-sm, .container-md, .container-lg, .container-xl {
+  .container, .carrusel, .sectionM__article2, .container-sm, .container-md, .container-lg, .container-xl {
     max-width: 1140px;
   }
 }
 
-.row, .header__nav, .footer__section, .footer__section__article__div {
+.row, .header__nav, .footer__section, .footer__section__article__div, .sectionM__article__div {
   display: flex;
   flex-wrap: wrap;
   margin-right: -15px;
@@ -4495,7 +4495,7 @@ input[type="button"].btn-block {
   padding: 0.5rem 1rem;
 }
 
-.navbar .container, .header__nav .container, .navbar .carrusel, .header__nav .carrusel, .navbar .sectionM__article2, .header__nav .sectionM__article2, .navbar .sectionM__article, .header__nav .sectionM__article,
+.navbar .container, .header__nav .container, .navbar .carrusel, .header__nav .carrusel, .navbar .sectionM__article2, .header__nav .sectionM__article2,
 .navbar .container-fluid,
 .header__nav .container-fluid, .navbar .container-sm, .header__nav .container-sm, .navbar .container-md, .header__nav .container-md, .navbar .container-lg, .header__nav .container-lg, .navbar .container-xl, .header__nav .container-xl, .navbar .header, .header__nav .header, .navbar .footer, .header__nav .footer, .navbar .sectionM, .header__nav .sectionM {
   display: flex;
@@ -4572,7 +4572,7 @@ input[type="button"].btn-block {
 }
 
 @media (max-width: 575.98px) {
-  .navbar-expand-sm > .container, .header__nav .navbar-expand-sm > .container, .navbar-expand-sm .header__nav > .container, .header__nav > .container, .navbar-expand-sm > .carrusel, .header__nav .navbar-expand-sm > .carrusel, .navbar-expand-sm .header__nav > .carrusel, .header__nav > .carrusel, .navbar-expand-sm > .sectionM__article2, .header__nav .navbar-expand-sm > .sectionM__article2, .navbar-expand-sm .header__nav > .sectionM__article2, .header__nav > .sectionM__article2, .navbar-expand-sm > .sectionM__article, .header__nav .navbar-expand-sm > .sectionM__article, .navbar-expand-sm .header__nav > .sectionM__article, .header__nav > .sectionM__article,
+  .navbar-expand-sm > .container, .header__nav .navbar-expand-sm > .container, .navbar-expand-sm .header__nav > .container, .header__nav > .container, .navbar-expand-sm > .carrusel, .header__nav .navbar-expand-sm > .carrusel, .navbar-expand-sm .header__nav > .carrusel, .header__nav > .carrusel, .navbar-expand-sm > .sectionM__article2, .header__nav .navbar-expand-sm > .sectionM__article2, .navbar-expand-sm .header__nav > .sectionM__article2, .header__nav > .sectionM__article2,
   .navbar-expand-sm > .container-fluid,
   .header__nav .navbar-expand-sm > .container-fluid,
   .navbar-expand-sm .header__nav > .container-fluid,
@@ -4597,7 +4597,7 @@ input[type="button"].btn-block {
     padding-right: 0.5rem;
     padding-left: 0.5rem;
   }
-  .navbar-expand-sm > .container, .header__nav .navbar-expand-sm > .container, .navbar-expand-sm .header__nav > .container, .header__nav > .container, .navbar-expand-sm > .carrusel, .header__nav .navbar-expand-sm > .carrusel, .navbar-expand-sm .header__nav > .carrusel, .header__nav > .carrusel, .navbar-expand-sm > .sectionM__article2, .header__nav .navbar-expand-sm > .sectionM__article2, .navbar-expand-sm .header__nav > .sectionM__article2, .header__nav > .sectionM__article2, .navbar-expand-sm > .sectionM__article, .header__nav .navbar-expand-sm > .sectionM__article, .navbar-expand-sm .header__nav > .sectionM__article, .header__nav > .sectionM__article,
+  .navbar-expand-sm > .container, .header__nav .navbar-expand-sm > .container, .navbar-expand-sm .header__nav > .container, .header__nav > .container, .navbar-expand-sm > .carrusel, .header__nav .navbar-expand-sm > .carrusel, .navbar-expand-sm .header__nav > .carrusel, .header__nav > .carrusel, .navbar-expand-sm > .sectionM__article2, .header__nav .navbar-expand-sm > .sectionM__article2, .navbar-expand-sm .header__nav > .sectionM__article2, .header__nav > .sectionM__article2,
   .navbar-expand-sm > .container-fluid,
   .header__nav .navbar-expand-sm > .container-fluid,
   .navbar-expand-sm .header__nav > .container-fluid,
@@ -4614,7 +4614,7 @@ input[type="button"].btn-block {
 }
 
 @media (max-width: 767.98px) {
-  .navbar-expand-md > .container, .header__nav .navbar-expand-md > .container, .navbar-expand-md .header__nav > .container, .header__nav > .container, .navbar-expand-md > .carrusel, .header__nav .navbar-expand-md > .carrusel, .navbar-expand-md .header__nav > .carrusel, .header__nav > .carrusel, .navbar-expand-md > .sectionM__article2, .header__nav .navbar-expand-md > .sectionM__article2, .navbar-expand-md .header__nav > .sectionM__article2, .header__nav > .sectionM__article2, .navbar-expand-md > .sectionM__article, .header__nav .navbar-expand-md > .sectionM__article, .navbar-expand-md .header__nav > .sectionM__article, .header__nav > .sectionM__article,
+  .navbar-expand-md > .container, .header__nav .navbar-expand-md > .container, .navbar-expand-md .header__nav > .container, .header__nav > .container, .navbar-expand-md > .carrusel, .header__nav .navbar-expand-md > .carrusel, .navbar-expand-md .header__nav > .carrusel, .header__nav > .carrusel, .navbar-expand-md > .sectionM__article2, .header__nav .navbar-expand-md > .sectionM__article2, .navbar-expand-md .header__nav > .sectionM__article2, .header__nav > .sectionM__article2,
   .navbar-expand-md > .container-fluid,
   .header__nav .navbar-expand-md > .container-fluid,
   .navbar-expand-md .header__nav > .container-fluid,
@@ -4639,7 +4639,7 @@ input[type="button"].btn-block {
     padding-right: 0.5rem;
     padding-left: 0.5rem;
   }
-  .navbar-expand-md > .container, .header__nav .navbar-expand-md > .container, .navbar-expand-md .header__nav > .container, .header__nav > .container, .navbar-expand-md > .carrusel, .header__nav .navbar-expand-md > .carrusel, .navbar-expand-md .header__nav > .carrusel, .header__nav > .carrusel, .navbar-expand-md > .sectionM__article2, .header__nav .navbar-expand-md > .sectionM__article2, .navbar-expand-md .header__nav > .sectionM__article2, .header__nav > .sectionM__article2, .navbar-expand-md > .sectionM__article, .header__nav .navbar-expand-md > .sectionM__article, .navbar-expand-md .header__nav > .sectionM__article, .header__nav > .sectionM__article,
+  .navbar-expand-md > .container, .header__nav .navbar-expand-md > .container, .navbar-expand-md .header__nav > .container, .header__nav > .container, .navbar-expand-md > .carrusel, .header__nav .navbar-expand-md > .carrusel, .navbar-expand-md .header__nav > .carrusel, .header__nav > .carrusel, .navbar-expand-md > .sectionM__article2, .header__nav .navbar-expand-md > .sectionM__article2, .navbar-expand-md .header__nav > .sectionM__article2, .header__nav > .sectionM__article2,
   .navbar-expand-md > .container-fluid,
   .header__nav .navbar-expand-md > .container-fluid,
   .navbar-expand-md .header__nav > .container-fluid,
@@ -4656,7 +4656,7 @@ input[type="button"].btn-block {
 }
 
 @media (max-width: 991.98px) {
-  .navbar-expand-lg > .container, .header__nav .navbar-expand-lg > .container, .navbar-expand-lg .header__nav > .container, .header__nav > .container, .navbar-expand-lg > .carrusel, .header__nav .navbar-expand-lg > .carrusel, .navbar-expand-lg .header__nav > .carrusel, .header__nav > .carrusel, .navbar-expand-lg > .sectionM__article2, .header__nav .navbar-expand-lg > .sectionM__article2, .navbar-expand-lg .header__nav > .sectionM__article2, .header__nav > .sectionM__article2, .navbar-expand-lg > .sectionM__article, .header__nav .navbar-expand-lg > .sectionM__article, .navbar-expand-lg .header__nav > .sectionM__article, .header__nav > .sectionM__article,
+  .navbar-expand-lg > .container, .header__nav .navbar-expand-lg > .container, .navbar-expand-lg .header__nav > .container, .header__nav > .container, .navbar-expand-lg > .carrusel, .header__nav .navbar-expand-lg > .carrusel, .navbar-expand-lg .header__nav > .carrusel, .header__nav > .carrusel, .navbar-expand-lg > .sectionM__article2, .header__nav .navbar-expand-lg > .sectionM__article2, .navbar-expand-lg .header__nav > .sectionM__article2, .header__nav > .sectionM__article2,
   .navbar-expand-lg > .container-fluid,
   .header__nav .navbar-expand-lg > .container-fluid,
   .navbar-expand-lg .header__nav > .container-fluid,
@@ -4681,7 +4681,7 @@ input[type="button"].btn-block {
     padding-right: 0.5rem;
     padding-left: 0.5rem;
   }
-  .navbar-expand-lg > .container, .header__nav .navbar-expand-lg > .container, .navbar-expand-lg .header__nav > .container, .header__nav > .container, .navbar-expand-lg > .carrusel, .header__nav .navbar-expand-lg > .carrusel, .navbar-expand-lg .header__nav > .carrusel, .header__nav > .carrusel, .navbar-expand-lg > .sectionM__article2, .header__nav .navbar-expand-lg > .sectionM__article2, .navbar-expand-lg .header__nav > .sectionM__article2, .header__nav > .sectionM__article2, .navbar-expand-lg > .sectionM__article, .header__nav .navbar-expand-lg > .sectionM__article, .navbar-expand-lg .header__nav > .sectionM__article, .header__nav > .sectionM__article,
+  .navbar-expand-lg > .container, .header__nav .navbar-expand-lg > .container, .navbar-expand-lg .header__nav > .container, .header__nav > .container, .navbar-expand-lg > .carrusel, .header__nav .navbar-expand-lg > .carrusel, .navbar-expand-lg .header__nav > .carrusel, .header__nav > .carrusel, .navbar-expand-lg > .sectionM__article2, .header__nav .navbar-expand-lg > .sectionM__article2, .navbar-expand-lg .header__nav > .sectionM__article2, .header__nav > .sectionM__article2,
   .navbar-expand-lg > .container-fluid,
   .header__nav .navbar-expand-lg > .container-fluid,
   .navbar-expand-lg .header__nav > .container-fluid,
@@ -4698,7 +4698,7 @@ input[type="button"].btn-block {
 }
 
 @media (max-width: 1199.98px) {
-  .navbar-expand-xl > .container, .navbar-expand-xl > .carrusel, .navbar-expand-xl > .sectionM__article2, .navbar-expand-xl > .sectionM__article,
+  .navbar-expand-xl > .container, .navbar-expand-xl > .carrusel, .navbar-expand-xl > .sectionM__article2,
   .navbar-expand-xl > .container-fluid, .navbar-expand-xl > .container-sm, .navbar-expand-xl > .container-md, .navbar-expand-xl > .container-lg, .navbar-expand-xl > .container-xl, .navbar-expand-xl > .header, .navbar-expand-xl > .footer, .navbar-expand-xl > .sectionM {
     padding-right: 0;
     padding-left: 0;
@@ -4720,7 +4720,7 @@ input[type="button"].btn-block {
     padding-right: 0.5rem;
     padding-left: 0.5rem;
   }
-  .navbar-expand-xl > .container, .navbar-expand-xl > .carrusel, .navbar-expand-xl > .sectionM__article2, .navbar-expand-xl > .sectionM__article,
+  .navbar-expand-xl > .container, .navbar-expand-xl > .carrusel, .navbar-expand-xl > .sectionM__article2,
   .navbar-expand-xl > .container-fluid, .navbar-expand-xl > .container-sm, .navbar-expand-xl > .container-md, .navbar-expand-xl > .container-lg, .navbar-expand-xl > .container-xl, .navbar-expand-xl > .header, .navbar-expand-xl > .footer, .navbar-expand-xl > .sectionM {
     flex-wrap: nowrap;
   }
@@ -4738,7 +4738,7 @@ input[type="button"].btn-block {
   justify-content: flex-start;
 }
 
-.navbar-expand > .container, .navbar-expand > .carrusel, .navbar-expand > .sectionM__article2, .navbar-expand > .sectionM__article,
+.navbar-expand > .container, .navbar-expand > .carrusel, .navbar-expand > .sectionM__article2,
 .navbar-expand > .container-fluid, .navbar-expand > .container-sm, .navbar-expand > .container-md, .navbar-expand > .container-lg, .navbar-expand > .container-xl, .navbar-expand > .header, .navbar-expand > .footer, .navbar-expand > .sectionM {
   padding-right: 0;
   padding-left: 0;
@@ -4757,7 +4757,7 @@ input[type="button"].btn-block {
   padding-left: 0.5rem;
 }
 
-.navbar-expand > .container, .navbar-expand > .carrusel, .navbar-expand > .sectionM__article2, .navbar-expand > .sectionM__article,
+.navbar-expand > .container, .navbar-expand > .carrusel, .navbar-expand > .sectionM__article2,
 .navbar-expand > .container-fluid, .navbar-expand > .container-sm, .navbar-expand > .container-md, .navbar-expand > .container-lg, .navbar-expand > .container-xl, .navbar-expand > .header, .navbar-expand > .footer, .navbar-expand > .sectionM {
   flex-wrap: nowrap;
 }
@@ -8311,7 +8311,7 @@ button.bg-dark:focus {
   padding-top: 3rem !important;
 }
 
-.pr-5, .header__nav__redes, .sectionM__article2, .sectionM__article,
+.pr-5, .header__nav__redes, .sectionM__article2,
 .px-5 {
   padding-right: 3rem !important;
 }
@@ -8321,7 +8321,7 @@ button.bg-dark:focus {
   padding-bottom: 3rem !important;
 }
 
-.pl-5, .sectionM__article2, .sectionM__article,
+.pl-5, .sectionM__article2,
 .px-5 {
   padding-left: 3rem !important;
 }
@@ -10136,7 +10136,7 @@ a.text-dark:hover, a.text-dark:focus {
   body {
     min-width: 992px !important;
   }
-  .container, .carrusel, .sectionM__article2, .sectionM__article {
+  .container, .carrusel, .sectionM__article2 {
     min-width: 992px !important;
   }
   .navbar, .header__nav {
@@ -10511,7 +10511,7 @@ html {
   box-sizing: inherit;
 }
 
-.container, .carrusel, .sectionM__article2, .sectionM__article {
+.container, .carrusel, .sectionM__article2 {
   width: 100%;
   padding-right: 15px;
   padding-left: 15px;
@@ -10520,25 +10520,25 @@ html {
 }
 
 @media (min-width: 576px) {
-  .container, .carrusel, .sectionM__article2, .sectionM__article {
+  .container, .carrusel, .sectionM__article2 {
     max-width: 540px;
   }
 }
 
 @media (min-width: 768px) {
-  .container, .carrusel, .sectionM__article2, .sectionM__article {
+  .container, .carrusel, .sectionM__article2 {
     max-width: 720px;
   }
 }
 
 @media (min-width: 992px) {
-  .container, .carrusel, .sectionM__article2, .sectionM__article {
+  .container, .carrusel, .sectionM__article2 {
     max-width: 960px;
   }
 }
 
 @media (min-width: 1200px) {
-  .container, .carrusel, .sectionM__article2, .sectionM__article {
+  .container, .carrusel, .sectionM__article2 {
     max-width: 1140px;
   }
 }
@@ -10552,30 +10552,30 @@ html {
 }
 
 @media (min-width: 576px) {
-  .container, .carrusel, .sectionM__article2, .sectionM__article, .container-sm {
+  .container, .carrusel, .sectionM__article2, .container-sm {
     max-width: 540px;
   }
 }
 
 @media (min-width: 768px) {
-  .container, .carrusel, .sectionM__article2, .sectionM__article, .container-sm, .container-md {
+  .container, .carrusel, .sectionM__article2, .container-sm, .container-md {
     max-width: 720px;
   }
 }
 
 @media (min-width: 992px) {
-  .container, .carrusel, .sectionM__article2, .sectionM__article, .container-sm, .container-md, .container-lg {
+  .container, .carrusel, .sectionM__article2, .container-sm, .container-md, .container-lg {
     max-width: 960px;
   }
 }
 
 @media (min-width: 1200px) {
-  .container, .carrusel, .sectionM__article2, .sectionM__article, .container-sm, .container-md, .container-lg, .container-xl {
+  .container, .carrusel, .sectionM__article2, .container-sm, .container-md, .container-lg, .container-xl {
     max-width: 1140px;
   }
 }
 
-.row, .header__nav, .footer__section, .footer__section__article__div {
+.row, .header__nav, .footer__section, .footer__section__article__div, .sectionM__article__div {
   display: flex;
   flex-wrap: wrap;
   margin-right: -15px;
@@ -12495,7 +12495,7 @@ html {
   padding-top: 3rem !important;
 }
 
-.pr-5, .header__nav__redes, .sectionM__article2, .sectionM__article,
+.pr-5, .header__nav__redes, .sectionM__article2,
 .px-5 {
   padding-right: 3rem !important;
 }
@@ -12505,7 +12505,7 @@ html {
   padding-bottom: 3rem !important;
 }
 
-.pl-5, .sectionM__article2, .sectionM__article,
+.pl-5, .sectionM__article2,
 .px-5 {
   padding-left: 3rem !important;
 }
