Se realizo la ultima correcion retirando todas las clases viejas y se completo el _bootstrap y el _menu

--- a/scss/_bootstrap.scss
+++ b/scss/_bootstrap.scss
@@ -284,6 +284,17 @@
         }
     } 
     &__article{
+        @extend .container;
+        @extend .pl-5;
+        @extend .pr-5;
+        &__title{
+            @extend .mb-5;
+            @extend .text-center;
+            &__h2{
+                @extend .col-12;
+                @extend .display-2;
+            }
+        }
         &__div{
             @extend .row;
             &__div{
