inicio de la rama de bebidas

--- a/scss/_bebidas.sass
+++ b/scss/_bebidas.sass
@@ -1,35 +1,36 @@
 //--------------------------------------------------
 //--------------------------------------------------
-                //MENU y BEBEIDAS
+                //MENU
 //--------------------------------------------------
 //--------------------------------------------------
 
-.sectionM {
-  width: auto;
-  height: 100%;
+
+.sectionB {
+    width: auto;
+    height: 100%;
   /* background-color: red; */ 
 
     &__article2 {
-      height: 100%;
-      background-color: rgb(241, 241, 241);
-      padding-top: 15rem;
-      border: none; 
+        height: 100%;
+        background-color: rgb(241, 241, 241);
+        padding-top: 15rem;
+        border: none; 
     
-      &__title {
-        width: 100%;
-        border-bottom: solid black 0.3rem;
-        /* background-color: tomato; */ 
-      }
+        &__title {
+            width: 100%;
+            border-bottom: solid black 0.3rem;
+            /* background-color: tomato; */ 
+    }
 
     }
     
     &__article {
-      height: 100%;
-      background-color: rgb(241, 241, 241);
-      padding-top: 5rem;
-      border: none;
+        height: 100%;
+        background-color: rgb(241, 241, 241);
+        padding-top: 5rem;
+        border: none;
 
-      &__title {
+        &__title {
         width: 100%;
         border-bottom: solid black 0.3rem;
         /* background-color: tomato; */ 
@@ -40,7 +41,7 @@
           &__div{
             border-radius: 3rem !important;
             box-shadow: 0.6rem 0.6rem 3rem 0.4rem #979797;
-            &__div-foto-m{
+            &__div-foto-mb
               overflow: hidden;
               border-radius: 2.5rem 2.5rem 0rem 0rem; 
             
@@ -62,7 +63,7 @@
 }
 
 
-.sectionM__article__div__div__div__div-texto-m{
+.sectionB__article__div__div__div__div-texto-b{
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -76,7 +77,7 @@
         width: 100%;
     }
 
-    .sectionM__article__div__div__div__div-texto-m__div{
+    .sectionB__article__div__div__div__div-texto-b__div{
       width: 100%;
       /* background-color: red; */
       & a{
