--- a/scss/_bootstrap.scss
+++ b/scss/_bootstrap.scss
@@ -269,6 +269,11 @@
 
 
 .sectionM{
+
+//--------------------------------------------------
+                    //SECTROR TITULO
+//--------------------------------------------------
+
     @extend .container-fluid;
     &__article2{
         @extend .container;
@@ -284,6 +289,10 @@
         }
     } 
 
+//--------------------------------------------------
+                    //SECTROR TITULO2
+//--------------------------------------------------
+
     &__article{
         @extend .container;
         @extend .pl-5;
@@ -297,6 +306,9 @@
                 @extend .display-2;
             }
         }
+//--------------------------------------------------
+                    //SECTROR FOTO
+//--------------------------------------------------
 
         &__div{
             @extend .row;
@@ -311,6 +323,9 @@
                             @extend .card-img-top;
                         }
                     }
+//--------------------------------------------------
+                    //SECTROR TEXTO
+//--------------------------------------------------
                     &__div-texto-m{
                         @extend .card-body;
                         &__h2{
@@ -341,5 +356,20 @@
                 }
             }
         }
+    }
+}
+
+//--------------------------------------------------
+//--------------------------------------------------
+                    //BEBIDAS
+//--------------------------------------------------
+//--------------------------------------------------
+
+.sectionB{
+    @extend .container-fluid;
+    &__article2{
+        @extend .container;
+        @extend .pl-5;
+        @extend .pr-5; 
     }
 }
