--- a/scss/_@media.scss
+++ b/scss/_@media.scss
@@ -130,7 +130,7 @@
         .header__nav__redes {
             margin: 2rem 0rem; 
             &__img{
-                width: 8%; 
+                width: 10%; 
             }
         } 
         }
@@ -207,3 +207,126 @@
             }
         }
     }
+
+
+//--------------------------------------------------
+//--------------------------------------------------
+                //MENU
+//--------------------------------------------------
+//--------------------------------------------------
+
+@media (max-width: 768px) {
+
+//--------------------------------------------------
+                //TAMAÑO DE TITULO 
+//--------------------------------------------------
+
+    
+    .sectionM{
+        &__article2{
+            padding-top: 3rem !important;
+            &__title{
+                &__h2{
+                    font-size: 4rem !important;
+                }
+            }
+        }
+
+        &__article{
+            padding-top: 2rem !important;
+            &__title{
+                &__h2{
+                    font-size: 4rem !important;
+                }
+            }
+//--------------------------------------------------
+                //TAMAÑO DE TEXTO
+//--------------------------------------------------
+            &__div{
+                &__div{
+                    &__div{
+                        height: 50rem !important;
+                        &__div-texto-m{
+                            &__h2{
+                                font-size: 2.8rem !important;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+//--------------------------------------------------
+//--------------------------------------------------
+                //BEBIDAS
+//--------------------------------------------------
+//--------------------------------------------------
+
+@media (max-width: 768px) {
+
+//--------------------------------------------------
+                //TAMAÑO DE TITULO 
+//--------------------------------------------------
+    
+        
+        .sectionB{
+            &__article2{
+                padding-top: 3rem !important;
+                &__title{
+                    &__h2{
+                        font-size: 4rem !important;
+                    }
+                }
+            }
+    
+            &__article{
+                padding-top: 2rem !important;
+                &__title{
+                    &__h2{
+                        font-size: 4rem !important;
+                    }
+                }
+//--------------------------------------------------
+                //TAMAÑO DE TEXTO
+//--------------------------------------------------
+                &__div{
+                    &__div{
+                        &__div{
+                            &__div-texto-b{
+                                &__h2{
+                                    font-size: 2.8rem !important;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+//--------------------------------------------------
+//--------------------------------------------------
+                //NOSOTROS
+//--------------------------------------------------
+//--------------------------------------------------
+
+@media (max-width: 768px) {
+    .sectionN{
+        &__article{
+            &__div{
+                margin: 5rem 0 0 0 !important;
+            }
+            &__div-texto-n{
+                margin: 4rem 0 !important;
+            }
+        }
+    }
+}
+
+//--------------------------------------------------
+//--------------------------------------------------
+                //CONTACTOS
+//--------------------------------------------------
+//--------------------------------------------------
