--- a/scss/_bebidas.scss
+++ b/scss/_bebidas.scss
@@ -1,6 +1,6 @@
 //--------------------------------------------------
 //--------------------------------------------------
-                //MENU y BEBEIDAS
+                //BEBEIDAS
 //--------------------------------------------------
 //--------------------------------------------------
 
