--- a/scss/_bootstrap.scss
+++ b/scss/_bootstrap.scss
@@ -447,3 +447,9 @@
         }
     }
 }
+
+//--------------------------------------------------
+//--------------------------------------------------
+                    //NOSOTROS
+//--------------------------------------------------
+//--------------------------------------------------
