Se corrigio la seccion de Contactos, paso todo a scss y se agrego @media la parte de SM, se modifico los dos metas de description y de KEYWORD

--- a/scss/_@media.scss
+++ b/scss/_@media.scss
@@ -330,3 +330,14 @@
                 //CONTACTOS
 //--------------------------------------------------
 //--------------------------------------------------
+
+@media (max-width: 768px) {
+    .sectionC{
+        &__article{
+            padding: 5rem 0 0 0 !important;
+        }
+        &__consulta{
+            padding: 5rem 0 0 0 !important;
+        }
+    }
+}
