--- a/scss/_bootstrap.scss
+++ b/scss/_bootstrap.scss
@@ -453,3 +453,33 @@
                     //NOSOTROS
 //--------------------------------------------------
 //--------------------------------------------------
+
+.sectionN {
+    @extend .container;
+    &__article{
+        @extend .row;
+        &__div{
+            @extend .col-sm-12;
+            @extend .col-lg-6;
+            @extend .d-flex;
+            @extend .justify-content-center;
+            & img{
+                @extend .img-fluid;
+            }
+        }
+
+        &__div-texto-n{
+            @extend .col-sm-12;
+            @extend .col-lg-6;
+            &__h1{
+                @extend .display-2;
+            }
+        }
+    }
+}
+
+//--------------------------------------------------
+//--------------------------------------------------
+                    //CONTACTOS
+//--------------------------------------------------
+//--------------------------------------------------
