--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,6 +6,7 @@
 @import"menu";
 @import"bebidas";
 @import"nosotros";
+@import"contactos";
 @import"bootstrap";
 @import"bootstrap-reboot";
 @import"bootstrap-grid";
@@ -26,81 +27,6 @@ https://colorhunt.co/palette/169452 */
     font-family: 'Roboto', sans-serif;
     box-sizing: border-box; }
 
-
-/* CONTACTOS */
-
-.section__article{
-  padding: 17rem 0rem 5rem 0rem;
-}
-
-.section__consulta{
-  padding: 17rem 0rem 5rem 0rem;
-}
-
-.section__consulta__form{
-  width: $size-width;
-  background-color: rgba(241, 241, 241, 0.938);
-  height: 62.5rem;
-}
-
-.section__consulta__form__h2{
-  text-align: center;
-  padding-top: 2rem;
-}
-
-.section__consulta__form__div{
-  margin: 0.5rem 0rem;
-  padding: 0rem 3rem;
-}
-
-.section__consulta__form__div__label{
-  font-size: 2rem;
-  font-weight: lighter;
-}
-
-#formGroupExampleInput1{
-  width:$size-width;
-  height:4rem;
-  font-size: 1.5rem;
-}
-#formGroupExampleInput2{
-  width:$size-width;
-  height: 4rem;
-  font-size: 1.5rem;
-}
-#formGroupExampleInput3{
-  width:$size-width;
-  height: 4rem;
-  font-size: 1.5rem;
-}
-
-#validationTextarea{
-  width: 94%;
-  height: 10rem;
-  margin: 2rem 3rem;
-  padding: 0rem 1rem;
-  font-size: 1.5rem;
-}
-
-#inputState{
-  width:$size-width;
-  height: 4rem;
-  font-size: 1.5rem;
-}
-
-.section__consulta__form__btn a{
-  font-size: 1.8rem;
-  margin: 1rem;
-}
-
-@media (max-width: 768px){
-  .section__article__div{
-    padding-top: 15rem;
-  }
-  .section__consulta{
-    padding-top: 0.5rem;
-  }
-}
 
 
 
